[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorter_dict"
version = "0.0.1"
authors = [
  { name="Daipayan Chakder", email="johnchakder@gmail.com" },
]
description = "c++ map like dictionary with iterator over key"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"